<resources>
    <string name="app_name">Real Estate Manager</string>

    <string name="map">Map</string>
    <string name="real_estate">Real Estate</string>

    <string name="permissions_toast_denied">This application will not work normally. Please, accept the location permission.</string>
    <string name="permissions_denied">We need permissions for the map.</string>
    <string name="insufficient_memory">The memory of your device is insufficient. Please make space.</string>

    <string name="location">LOCATION</string>
    <string name="tv_creation_title">CREATE NEW REAL ESTATE</string>
    <string name="tv_type">TYPE</string>
    <string name="tv_type_lowercase">Type</string>
    <string name="tv_description">DESCRIPTION</string>
    <string name="tv_price">PRICE</string>
    <string name="tv_price_min">MINIMAL PRICE</string>
    <string name="tv_price_max">MAXIMAL PRICE</string>
    <string name="tv_price_lowercase">Price</string>
    <string name="tv_surface">SURFACE</string>
    <string name="tv_surface_min">MINIMAL SURFACE</string>
    <string name="tv_surface_max">MAXIMAL SURFACE</string>
    <string name="tv_surface_lowercase">Surface</string>
    <string name="tv_available_lowercase">Available</string>
    <string name="tv_room_number">ROOM NUMBER</string>
    <string name="tv_room_number_lowercase">Room</string>
    <string name="tv_poi_number_lowercase">Proximity to point of interest</string>
    <string name="tv_poi_number">POINT OF INTEREST</string>
    <string name="tv_bedroom_number">BEDROOM NUMBER</string>
    <string name="tv_bathroom_number">BATHROOM NUMBER</string>
    <string name="tv_address">ADDRESS</string>
    <string name="b_create">Create</string>
    <string name="number_and_street">NUMBER AND STREET</string>
    <string name="postal_code">POSTAL CODE</string>
    <string name="town">TOWN</string>
    <string name="room">ROOM</string>
    <string name="bedroom">BEDROOM</string>
    <string name="bathroom">BATHROOM</string>
    <string name="create">CREATE</string>

    <string name="field_empty">Field can\'t be empty</string>
    <string name="incorrect_address">Address incorrect</string>

    <string name="image_view">image_view</string>

    <string name="image_intent">Select image</string>
    <string name="informations">INFORMATIONS</string>
    <string name="address">ADDRESS</string>

    <string name="tv_your_research">Your research (min 3 chars)</string>
    <string name="b_confirm">CONFIRM</string>
    <string name="credit_simulator">CREDIT SIMULATOR</string>
    <string name="tie_number_of_years">NUMBER OF YEARS</string>
    <string name="tie_number_of_percentage">NUMBER OF PERCENTAGE</string>
    <string name="monthly_payment">MONTHLY PAYMENT</string>
    <string name="cost_of_credit">COST OF CREDIT</string>

    <string name="notification_text">Add of Real Estate is successful</string>
    <string name="tv_item_sold">SOLD</string>

    <string name="tie_money_contribution">MONEY CONTRIBUTION</string>
    <string name="tie_money_contribution_error">Contribution cost more than real estate</string>

    <string name="simple_space">\u0020</string>
    <string name="dollar">$</string>
    <string name="zero">0</string>
    <string name="m2">m2</string>
    <string name="sold">Sold</string>
    <string name="sell">Sell</string>
    
    <string name="simulator_button">Simulator button</string>
    <string name="surface">Surface</string>
    <string name="price">Price</string>
    <string name="point_of_interest">Point of interest</string>
    <string name="criteria">Criteria</string>
    <string name="cancel_criteria">Cancel criteria</string>
    <string name="zoom_map">Zoom map</string>
    <string name="real_estate_item">Real estate item</string>
    <string name="real_estate_image">Real estate image</string>
    <string name="type_of_real_estate">Type of real estate</string>
    <string name="add_real_estate">Add real estate</string>
>>>>>>> d0e47ef (Fix xml)

</resources>
