<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3D3D3">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/is_add"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:scaleType="centerCrop"

                app:iss_title_background="@drawable/gradient_custom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:text="@string/description"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/is_add" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.50" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_type"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_description">

                <AutoCompleteTextView
                    android:id="@+id/filled_exposed_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tv_type"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/tv_title_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tv_price"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_add_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                app:counterEnabled="true"
                app:counterMaxLength="220"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/til_type">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:maxLines="6"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/view_add"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="50dp"
                android:background="@color/colorSecondary"
                app:layout_constraintTop_toBottomOf="@id/til_add_description" />

            <TextView
                android:id="@+id/tv_title_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/location"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_add" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_add_location1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/tv_title_location">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_location1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/number_and_street"
                    android:inputType="textMultiLine"
                    android:maxLines="2"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_add_location2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/til_add_location1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_location2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/postal_code"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_add_location3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/til_add_location2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_location3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/town"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/view_add2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="50dp"
                android:background="@color/colorSecondary"
                app:layout_constraintTop_toBottomOf="@id/til_add_location3" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_add_surface"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_add2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_surface"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/surface"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_add_room"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/view_add2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_room"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/room"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_add_bedroom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_add_surface">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_bedroom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bedroom"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_add_bathroom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/til_add_room">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_bathroom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bathroom"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/b_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:text="@string/create"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guideline"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/til_add_bathroom" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>


